Adding missing plot file

--- a/p8105_hw1_ao2671.md
+++ b/p8105_hw1_ao2671.md
@@ -69,6 +69,10 @@ logical_to_factor_to_numeric
 
 ### Problem 2
 
-    ## [1] "The dataset has  8  columns and contains the information about  344  pinguings from  3  species of pinguings   living on  3  islands. The date specifies their  sex  and  year as well as bill characteristics. Islands include  Biscoe, Dream, Torgersen  and species include  Adelie, Chinstrap, Gentoo Mean flipper length is  200.915204678363"
+    ## [1] "The dataset has  8  columns and contains the information about  344 
+    pinguings from  3  species of pinguings   living on  3  islands. The date
+    specifies their  sex  and  year as well as bill characteristics. Islands include 
+    Biscoe, Dream, Torgersen  and species include  Adelie, Chinstrap, Gentoo Mean
+    flipper length is  200.915204678363"
 
 ![](p8105_hw1_ao2671_files/figure-gfm/chunk3-1.png)<!-- -->
